# sleep-quality-prediction

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
EDA/: EDA_notebook.ipynb  README.md
EDA/.ipynb_checkpoints/: README-checkpoint.md
archive/: preprocessed_data.csv
deployment/: README.md  predict.py  predict_one.py  test.py  train.py
deployment/k8s/: deployment.yaml  hpa.yaml  service.yaml
model-experimentation/: model_notebook.ipynb
utils/: build_lagged_features.py  build_model.py  load_data.py  load_model.py  preprocess.py  split_data.py
